--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,23 @@ authors = ["adii21-Ux <adityasangave2112@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+anyio = "3.6.1"
+asgiref = "3.5.2"
+click = "8.1.3"
+dnspython = "2.2.1"
+email-validator = "1.2.1"
+fastapi = "0.78.0"
+greenlet = "1.1.2"
+h11 = "0.13.0"
+idna = "3.3"
+pydantic = "1.9.1"
+six = "1.16.0"
+sniffio = "1.2.0"
+SQLAlchemy = "1.4.37"
+SQLAlchemy-Utils = "0.38.2"
+starlette = "0.19.1"
+typing-extensions = "4.2.0"
+uvicorn = "0.17.6"
 
 [tool.poetry.dev-dependencies]
 
